--- a/hatebase_names.html
+++ b/hatebase_names.html
@@ -8,6 +8,10 @@
 <body>
 
     <style type="text/css">
+        body {
+            background-color: var(--c-1);
+        }
+
         :root {
             --dot-size: 50px;
         }
@@ -16,7 +20,7 @@
             height: var(--dot-size);
             width: var(--dot-size);
             background-color: #e05363;
-            opacity: .5;
+            opacity: .45;
             border-radius: 50%;
             display: inline-block;
             margin: 60px 40px;
@@ -28,33 +32,36 @@
         }
 
         .dot:hover {
-            transform: scale(2);
-            opacity: 1;
+            /* transform: scale(2); */
+            opacity: .9;
             transition: opacity calc(var(--a-transition)/1.5) ease-out,
                 transform calc(var(--a-transition)/1.5) ease-out;
         }
 
         .dot.on {
             opacity: 1;
-            transform: scale(1.5);
+            transform: scale(1.2);
         }
 
         #tooltip {
             opacity: 0;
-            margin-left: 28px;
-            padding: 10px;
+            margin-top: 20px;
+            margin-left: 20px;
+            padding: 15px;
             position: fixed;
             z-index: 1000;
             width: auto;
             height: auto;
-            color: var(--c-2);
-            background: var(--c-1);
-
+            max-width: 300px;
+            color: var(--c-1);
+            background: var(--c-2);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
             transition: opacity calc(var(--a-transition)/4) linear;
         }
 
         #tooltip.summon {
-            opacity: 1;
+            opacity: .90;
 
             transition: opacity calc(var(--a-transition)/2) ease-out;
         }
@@ -82,32 +89,42 @@
 
         <div id="hate-words" class="">
             <div>
-                <span class="dot" data-name="Nicnonesiste" data-description="Ciaone Nic" data-category="1,2"></span>
-                <span class="dot" data-category="2,8"></span>
-                <span class="dot" data-category="4,7"></span>
-                <span class="dot" data-category="10, 14"></span>
-                <span class="dot" data-category="3"></span>
+                <span class="dot" data-name="Diaper Head" data-category="Ethnicity" data-offensiveness=17
+                    data-description="An Arab, Indian Sikh or other individual of Middle Eastern or South Asian descent wearing traditional headdress such as turbans or keffiyehs. Sometimes used generically for all Islamic nations."></span>
+                <span class="dot" data-name="Frog" data-category="Ethnicity" data-offensiveness=7 data-description="A French person. Prior to 19th century, referred to the Dutch (as they were stereotyped as being marsh-dwellers). When France became Britain's main enemy, replacing the Dutch, the epithet transferred to them, due to the French recipe for eating frogs' legs (see comparable French term Rosbif). Also used in Canada to refer to both the French and French Canadians"></span>
+                <span class="dot" data-name="Yokel" data-category="Ethnicity" data-offensiveness=9 data-description="A rural person."></span>
+                <span class="dot" data-name="Zebra" data-category="Ethnicity" data-offensiveness=24 data-description="A person of mixed Caucasian and black parentage"></span>
+                <span class="dot" data-name="Pussy" data-category="Gender" data-offensiveness=14 data-description="[1] Pejorative word for female. <br> [2] Pejorative word for male, meaning meek or cowardly."></span>
             </div>
             <div>
-                <span class="dot" data-category="9"></span>
-                <span class="dot" data-category="10"></span>
-                <span class="dot" data-category="3"></span>
-                <span class="dot" data-category="6"></span>
-                <span class="dot" data-category="3"></span>
+                <span class="dot" data-name="Anchor Baby" data-category="Ethnicity" data-offensiveness=40
+                    data-description="A child of illegal immigrants, particularly in the United States, from the notion of dropping an anchor for other family members to acquire citizenship"></span>
+                <span class="dot" data-name="Jewbacca" data-category="Ethnicity" data-offensiveness=33 data-description="A disabled person"></span>
+                <span class="dot" data-name="Cripple" data-category="Disability" data-offensiveness=26 data-description="A hairy person of Jewish ancestry, from the Star Wars character, Chewbacca."></span>
+                <span class="dot" data-name="Zionazi" data-category="Nationality, Religion" data-offensiveness=47
+                    data-description="A Jew living in Israel"></span>
+                <span class="dot" data-name="Pinto" data-category="Ethnicity" data-offensiveness=37 data-description="One who has both a Caucasian parent and a Native American parent"></span>
             </div>
             <div>
-                <span class="dot" data-category="4"></span>
-                <span class="dot" data-category="4"></span>
-                <span class="dot" data-category="7"></span>
-                <span class="dot" data-category="7"></span>
-                <span class="dot" data-category="1"></span>
+                <span class="dot" data-name="Kraut" data-category="Nationality" data-offensiveness=65 data-description="A German, most specifically during World War II. From Sauerkrau"></span>
+                <span class="dot" data-name="Tranny" data-category="Gender, Sexual Orientation" data-offensiveness=50
+                    data-description="Pejorative term which is shortened from either transgendered, transsexual or transvestite. May be used to refer to these individuals, or others, in a derogatory or offensive manner"></span>
+                <span class="dot" data-name="Porch Monkey" data-category="Ethnicity" data-offensiveness=73
+                    data-description="A black person referring to perceived common behavior of groups hanging out on front porches or steps of urban apartment complexes in US cities"></span>
+                <span class="dot" data-name="Sheepfucker" data-category="Nationality" data-offensiveness=50
+                    data-description="A person of Scottish or Welsh descent, from an alleged predilection for having sex with sheep due to the scarcity of people in these regions"></span>
+                <span class="dot" data-name="Fag" data-category="Sexual Orientation" data-offensiveness=53
+                    data-description="A homosexual"></span>
             </div>
             <div>
-                <span class="dot" data-category="3"></span>
-                <span class="dot" data-category="3,4"></span>
-                <span class="dot" data-category="9, 7"></span>
-                <span class="dot" data-category="3,6"></span>
-                <span class="dot" data-category="2,4,6"></span>
+                <span class="dot" data-name="Half Breed" data-category="Ethnicity" data-offensiveness=79
+                    data-description="One who is of mixed race"></span>
+                <span class="dot" data-name="Wigga" data-category="Ethnicity, Nationality" data-offensiveness=82
+                    data-description="[1] Used in 19th-century United States to refer to the Irish <br> [2] Sometimes used today in reference to white people in a manner similar to white trash or redneck <br> [3] Also refers to white youth that imitate urban black youth by means of clothing style, mannerisms, and slang speech. The 'w' at the start of wigger refers to the white person and the 'igger' refers to nigger, which is a racial slur for black people."></span>
+                <span class="dot" data-name="Slope" data-category="Ethnicity" data-offensiveness=82 data-description="A person of Asian descent, particularly Vietnamese or Chinese"></span>
+                <span class="dot" data-name="Niglet" data-category="Ethnicity" data-offensiveness=85 data-description="A black child"></span>
+                <span class="dot" data-name="Ginzo" data-category="Ethnicity, Nationality" data-offensiveness=96
+                    data-description="A person of Italian birth or descent. Most likely derived from 'Guinea Negro,' implying that Italians are dark or swarthy-skinned like the natives of Guinea. The diminutive 'Ginzo' probably dates back to World War II and is derived from Australian slang"></span>
             </div>
         </div>
     </div>
@@ -116,30 +133,43 @@
         var tooltip = document.getElementById('tooltip');
         var dotsArray = document.querySelectorAll('.dot');
 
+        function showTooltip(e) {
+            tooltip.style.left = e.pageX + 'px';
+            tooltip.style.top = e.pageY + 'px';
+        }
+
+        document.addEventListener('mousemove', showTooltip, false);
+        document.addEventListener('mouseout', (e) => {
+            tooltip.classList.remove("summon");
+        }, false);
+
+
         for (i = 0; i < dotsArray.length; i++) {
             dotsArray[i].addEventListener('mouseover', sameCategoriesOn, false);
             //usare nuova funzione per reverse + nascondere tooltip
             dotsArray[i].addEventListener('mouseout', sameCategoriesOff, false);
         }
 
-        function showTooltip(e) {
-            tooltip.style.left = e.pageX + 'px';
-            tooltip.style.top = e.pageY + 'px';
-        }
-        document.addEventListener('mousemove', showTooltip, false);
-        document.addEventListener('mouseout', (e) => {
-            tooltip.classList.remove("summon");
-        }, false);
+            var dotToIgnore;
+            var targetDotScale;
 
         function sameCategoriesOn() {
             var dots = document.querySelectorAll('.dot');
 
             // controlla se tutti gli altri dots hanno la categoria del dot sul quale si trova il mouse
             for (t = 0; t < dots.length; t++) {
-                if (typeof thisCategory != null) {
+
+                // controlla su quale pallino è hover
+                if (dots[t].matches('.dot:hover')){
+                    dotToIgnore = t;
+                    targetDotScale = this.getAttribute('data-offensiveness');
+                    this.style.transform = "scale(" + (targetDotScale*0.1) + ")";
+                }
+
+                if (typeof thisCategory != null && t != dotToIgnore) {
                     var thisCategory = dots[t];
-                    var sourceCategory = thisCategory.getAttribute('data-category').split(",");
-                    var targetCategory = this.getAttribute('data-category').split(",");
+                    var sourceCategory = thisCategory.getAttribute('data-category').split(", ");
+                    var targetCategory = this.getAttribute('data-category').split(", ");
                     // v conta le categorie che trova in un elemento
                     for (v = 0; v < sourceCategory.length; v++) {
                         for (w = 0; w < targetCategory.length; w++) {
@@ -153,90 +183,49 @@
             }
 
 
-            tooltip.innerHTML = 'Name: ' +
-                                this.getAttribute('data-name') +
-                                '<br>' +
-                                this.getAttribute('data-description') +
-                                '<br>' +
-                                this.getAttribute('data-category');
+            // tooltip.innerHTML = '<span class="highlighted" style="padding: 3px 6px; color: var(--c-1);  font-family:"IBM Plex" >' +
+            //                     this.getAttribute('data-name') +
+            //                     '</span><br>' +
+            //                     '<span>Category: </span>' +
+            //                     this.getAttribute('data-category') +
+            //                     '<br>' +
+            //                     this.getAttribute('data-description');
+            
+            //Cosa scrive nel tooltip
+            tooltip.innerHTML =
+                `<span class="highlighted" style="padding: 3px 6px; color: var(--c-1); line-height: 1.6; font-family:"IBM Plex Light" ";>
+                                    ${this.getAttribute('data-name')}
+                                </span>
+                                <br>
+                                <span style="line-height: 1.6">
+                                    Category: 
+                                    ${this.getAttribute('data-category')}
+                                </span>
+                                <br>
+                                <span style="line-height: 1.6">
+                                    Offensiveness: 
+                                    ${this.getAttribute('data-offensiveness')}
+                                </span>
+                                <br>
+                                <br>
+                                <span>
+                                    ${this.getAttribute('data-description')}
+                                </span>
+                                `
 
             tooltip.classList.add("summon");
-
-            // tooltip.classList.remove("summon");
-            // for (t = 0; t < dots.length; t++) {
-            //     if (typeof thisCategory != null) {
-            //         var thisCategory = dots[t];
-            //         var sourceCategory = thisCategory.getAttribute('data-category').split(",");
-            //         var targetCategory = this.getAttribute('data-category').split(",");
-            //         for (v = 0; v < sourceCategory.length; v++) {
-            //             for (w = 0; w < targetCategory.length; w++) {
-            //                 if (sourceCategory[v] == targetCategory[w]) {
-            //                     dots[t].classList.remove("on");
-            //                 }
-            //             }
-            //         }
-            //     }
-            // }
         }
 
         function sameCategoriesOff() {
             var dots = document.querySelectorAll('.dot');
             for (i = 0; i < dots.length; i++) {
                 dots[i].classList.remove('on');
+                if (i == dotToIgnore) {
+                    dots[i].style.transform = "scale(1)";
+                    dots[i].style.removeProperty = "scale";
+                }
             }
         }
-
-        // function showTooltip(e) {
-        //     var dots = document.querySelectorAll('.dot');
-        //     for (var i = 0; i < dots.length; i++) {
-        //         var currentDot = dots[i];
-        //         var thisDot = i;
-        //         dots[i].onmouseover = function () {
-        //             console.log(thisDot);
-        //             for (t = 0; t < dots.length; t++) {
-        //                 if (typeof thisCategory != null && thisDot != t) {
-        //                     console.log(thisDot + "--" + t);
-        //                     var thisCategory = dots[t];
-        //                     var sourceCategory = thisCategory.getAttribute('data-category').split(",");
-        //                     var targetCategory = currentDot.getAttribute('data-category').split(",");
-        //                     for (v = 0; v < sourceCategory.length; v++) {
-        //                         for (w = 0; w < targetCategory.length; w++) {
-        //                             if (sourceCategory[v] == targetCategory[w]) {
-        //                                 dots[t].classList.add("on");
-        //                             }
-        //                         }
-        //                     }
-        //                 }
-        //             }
-
-        //             tooltip.innerHTML = 'Name: ' + this.getAttribute('data-name') + '<br>' + this.getAttribute(
-        //                 'data-description');
-        //             tooltip.classList.add("summon");
-        //         }
-
-
-        //         dots[i].onmouseout = function () {
-        //             tooltip.classList.remove("summon");
-        //             for (t = 0; t < dots.length; t++) {
-        //                 if (typeof thisCategory != null) {
-        //                     var thisCategory = dots[t];
-        //                     var sourceCategory = thisCategory.getAttribute('data-category').split(",");
-        //                     var targetCategory = currentDot.getAttribute('data-category').split(",");
-        //                     for (v = 0; v < sourceCategory.length; v++) {
-        //                         for (w = 0; w < targetCategory.length; w++) {
-        //                             if (sourceCategory[v] == targetCategory[w]) {
-        //                                 dots[t].classList.remove("on");
-        //                             }
-        //                         }
-        //                     }
-        //                 }
-        //             }
-
-        //         }
-        //     }
-        //     tooltip.style.left = e.pageX + 'px';
-        //     tooltip.style.top = e.pageY + 'px';
-        // }
     </script>
 </body>
 
